<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">Word Counter</string>
  <string name="input">Input</string>
  <string name="notes">Notes</string>
  <string name="settings">Settings</string>
  <string name="hint_input">Enter your text here</string>
  <string name="basic_stats">Basic Stats</string>
  <string name="characters">Characters</string>
  <string name="characters_without_spaces">Characters without Spaces</string>
  <string name="words">Words</string>
  <string name="paragraphs">Paragraphs</string>
  <string name="size">Size</string>
  <string name="bookmark_hint">Enter note name</string>
  <string name="extra_stats">Extra Stats</string>
  <string name="unique_words">Unique Words</string>
  <string name="average_word_length">Average Word Length</string>
  <string name="avg_sentence_length_words">Average Sentence Length(Words)</string>
  <string name="avg_sentence_length_characters">Average Sentence Length(Characters)</string>
  <string name="length_stats">Length Stats</string>
  <string name="shortest_sentence">Shortest Sentence(Words)</string>
  <string name="longest_sentence">Longest Sentence(Words)</string>
  <string name="time_stats">Time Stats</string>
  <string name="reading_time">Reading Time</string>
  <string name="speaking_time">Speaking Time</string>
  <string name="writing_time">Hand Writing Time</string>
  <string name="save">Save</string>
  <string name="sentences">Sentences</string>
  <string name="save_dialog_desc">Alright! What would you like to call it?</string>
  <string name="edit_alert_title">Are you sure?</string>
  <string name="yes">Yes</string>
  <string name="edit_alert_desc">This action will erase current content. Are you sure you want to continue?</string>
  <string name="delete_alert_desc">Are you sure you want to delete this report?</string>
  <string name="no">No</string>
  <string name="generic_error_message">Looks like something went wrong. Please try again later…</string>
  <string name="deletion_success">Note deleted successfully</string>
  <string name="addition_success">Note added successfully</string>
  <string name="update_success">Note updated successfully</string>
  <string name="no_saved_notes">¯\\_(ツ)_/¯ \n\nNothing here!</string>
  <string name="rate_us_text">If you enjoy using this app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thank you for your support!</string>
  <string name="rate_us_text_short">Rate app on play store</string>
  <string name="rate_us_yes">RATE NOW</string>
  <string name="rate_us_later">LATER</string>
  <string name="rate_us_never">NEVER</string>
  <string name="rate_us_error">"Oh no. We were not able to reach play store. Sorry for that!"</string>
  <string name="change_ad_preference" tools:ignore="MissingTranslation">Change ad preference</string>
  <string name="drafts">Drafts</string>
  <string name="draft_deletion_success">Draft deleted successfully</string>
  <string name="draft_history_deletion_success">Deletion successful</string>
  <string name="draft_saved">Draft saved</string>
  <string name="draft_updated">Draft updated</string>
  <string name="draft_delete">Are you sure you want to delete this draft? All the histories will be deleted too</string>
  <string name="draft_history_delete">Are you sure you want to delete this draft history?</string>
  <string name="share_ui_text">Share app</string>
  <string name="share_app_text" translatable="false">Check out \"Word Counter - Count Words, Sentences &amp; Paragraphs\"</string>
  <string name="share_picker_text">Share using</string>
  <string name="activity_not_found_error">We could not find an app that could complete this action. Sorry for that!</string>
  <string name="basic_settings">Basic Settings</string>
  <string name="copy_clipboard_title">Copy clipboard text automatically</string>
  <string name="copy_clipboard_summary">App will prompt you to paste text from clipboard automatically on app launch</string>
  <string name="stat_settings">Stat Settings</string>
  <string name="reading_time_wpm">Reading Time (Words Per Minute)</string>
  <string name="speaking_time_wpm">Speaking Time (Words Per Minute)</string>
  <string name="writing_time_lpm">Writing Time (Letters Per Minute)</string>
  <string name="size_encoding_format">Size Encoding Format</string>
  <string name="utf_8" translatable="false">UTF-8</string>
  <string name="utf_16" translatable="false">UTF-16</string>
  <string name="utf_32" translatable="false">UTF-32</string>
  <string name="us_ascii" translatable="false">US-ASCII</string>
  <string name="iso_1" translatable="false">ISO–8859–1</string>
  <string name="paste">Paste</string>
  <string name="note_add_limit">Could not save note</string>
  <string name="app_title" tools:ignore="MissingTranslation">Word Counter - Count Words, Sentences &amp; Paragraphs</string>
  <string name="app_description" tools:ignore="MissingTranslation">Count words, characters, sentences, paragraphs, size and much more from text</string>
  <string name="title_1" tools:ignore="MissingTranslation">Top Features</string>
  <string name="title_2" tools:ignore="MissingTranslation">Count as you type</string>
  <string name="title_3" tools:ignore="MissingTranslation">Access to advanced Stats</string>
  <string name="title_4" tools:ignore="MissingTranslation">More control to you</string>
  <string name="title_5" tools:ignore="MissingTranslation">Never lose your typed text</string>
  <string name="title_6" tools:ignore="MissingTranslation">Save important notes</string>
  <string name="title_7" tools:ignore="MissingTranslation">Keep notes up to date</string>
  <string name="title_8" tools:ignore="MissingTranslation">Delete notes when they are no longer needed</string>
  <string name="title_9" tools:ignore="MissingTranslation">Open directly from another app</string>
  <string name="title_10" tools:ignore="MissingTranslation">Directly paste copied text</string>
  <string name="long_desc1" tools:ignore="MissingTranslation">Word Counter is a free and easy to use text tool for counting words, sentences, paragraphs and characters in your text as you type.
    It is designed to boost your productivity and make your life easier. The app can be extremely useful when posting or submitting to platforms which have limits imposed on number of characters, words or size.</string>
  <string name="long_desc2" tools:ignore="MissingTranslation">Count number of characters, sentences, words and paragraphs of the given text as you type.</string>
  <string name="long_desc3" tools:ignore="MissingTranslation">Generate following advanced stats for the text</string>
  <string name="long_desc4" tools:ignore="MissingTranslation">Time Stats(Reading time, Speaking time, Writing time)</string>
  <string name="long_desc5" tools:ignore="MissingTranslation"> Unique words</string>
  <string name="long_desc6" tools:ignore="MissingTranslation">Average word length, Average sentence length</string>
  <string name="long_desc7" tools:ignore="MissingTranslation">Shortest sentence length, Longest sentence length</string>
  <string name="long_desc8" tools:ignore="MissingTranslation">Control how the stats are calculated from settings screen</string>
  <string name="long_desc9" tools:ignore="MissingTranslation">Automatically save notes when you accidentally leave the apps. Access these texts in future under Drafts section. Edit or delete these drafts as you want. Drafts will also have history when you change any existing drafts</string>
  <string name="long_desc10" tools:ignore="MissingTranslation">Save current text with their stats. Always have your important text and notes one click away!</string>
  <string name="long_desc11" tools:ignore="MissingTranslation">Edit saved notes as and when data and content of those notes change. You can easily edit your saved notes to keep the notes up to date!</string>
  <string name="long_desc12" tools:ignore="MissingTranslation">Get rid of the any saved notes which is no longer needed by you</string>
  <string name="long_desc13" tools:ignore="MissingTranslation">Now quickly access Word counter from other apps while sharing text</string>
  <string name="long_desc14" tools:ignore="MissingTranslation">The app will prompt you to paste recently copied text from clipboard</string>
  <string name="long_desc15" tools:ignore="MissingTranslation">The word counting app now works with multiple languages such as Arabic, Czech, German, Spanish, French, Indonesian, Italian, Polish, Portuguese, Romanian, Russian and Vietnamese.</string>
  <string name="lets_go_premium">Let\'s go Premium</string>
  <string name="enjoy_benefits">Congrats! Enjoy benefits of our %s plan</string>
  <string name="premium_title_purchased">You have purchased premium plan</string>
  <string name="premium_message_purchased">You\'re enjoying benefits of our %s plan</string>
  <string name="premium_message">Unlock advanced features and help us improve this app by supporting us directly</string>
  <string name="plan">Plan</string>
  <string name="remove_ads">Remove Ads!</string>
  <string name="frequency_count">Get frequency count in extra stats</string>
  <string name="benefits_of_silver_plans">All benefits of Silver plan</string>
  <string name="five_more_themes">Five basic themes</string>
  <string name="support_large_text">Support for large text</string>
  <string name="show_count_in_status_bar">Show count in status bar when you are typing in other apps</string>
  <string name="benefits_of_gold_plans">All benefits of Gold plan</string>
  <string name="ten_more_themes">10 more themes</string>
  <string name="audio_input">Audio input</string>
  <string name="read_from_file">Open any file directly from Word Counter</string>
  <string name="export_to_file">Export note and stats as file(pdf, doc)</string>
  <string name="buy_yearly_subscription">Subscribe</string>
  <string name="buy_monthly_subscription_for">Subscribe For</string>
  <string name="buy_lifetime_premium">Buy</string>
  <string name="buy_lifetime_premium_for">Buy for </string>
  <string name="year">Year</string>
  <string name="buy_premium_title">Buy Word Counter Premium</string>
  <string name="buy_premium_message">Ads are annoying, right? We don\'t like them either. Buy our premium offerings to remove ads and unlock more advanced features. Click here to view available plans</string>
  <string name="coming_soon">Coming soon!</string>
  <string name="help_translate_word_counter">Help translate Word Counter</string>
  <string name="more_apps_by_spians_labs">More apps by Spians Labs</string>
  <string name="privacy_policy" translatable="false">Privacy policy</string>
  <string name="see_plans" translatable="false">See plans</string>
  <string name="ads_edu" translatable="false">Hey there! Thanks for using Word Counter.
    We are keeping this app free by introducing few ads with this update. They are very few and far in between. It will never show up on home screen. \n\nIf you think they\'re annoying and want to get rid of it, upgrade to our premium plan and support the development directly.
    You can upgrade later if you want to from settings screen.</string>
  <string name="freq_count">%d \u0020\u0020Occurrence found</string>
  <string name="freq_count_plural">%d \u0020\u0020Occurrences found</string>
  <string name="freq_top_word_text" translatable="false">%s - %d</string>
  <string name="freq_search_hint">Enter text to find frequency</string>
  <string name="freq_case_sensitive">Case sensitive matching</string>
  <string name="freq_simple_text_matching">Simple text matching</string>
  <string name="freq_word_matching">Word matching</string>
  <string name="freq_pattern_matching">Pattern matching(Regex)</string>
  <string name="most_frequent_header">Most frequent words</string>
  <string name="freq_unavailable_dialog_title">This is a premium feature</string>
</resources>