<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <android.support.v7.preference.PreferenceCategory
      android:title="@string/basic_settings">

    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="keysef1"
        android:summary="@string/copy_clipboard_summary"
        android:title="@string/copy_clipboard_title"/>

  </android.support.v7.preference.PreferenceCategory>

  <android.support.v7.preference.PreferenceCategory
      android:title="@string/stat_settings">

    <android.support.v7.preference.EditTextPreference
        android:defaultValue="275"
        android:key="reading_wpm"
        android:title="@string/reading_time_wpm"/>

    <android.support.v7.preference.EditTextPreference
        android:defaultValue="180"
        android:key="speaking_wpm"
        android:title="@string/speaking_time_wpm"/>

    <android.support.v7.preference.EditTextPreference
        android:defaultValue="68"
        android:key="writing_lpm"
        android:title="@string/writing_time_lpm"/>
  </android.support.v7.preference.PreferenceCategory>


</android.support.v7.preference.PreferenceScreen>