<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialogView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

  <ImageView
      android:id="@+id/ivSave"
      android:layout_width="match_parent"
      android:layout_height="@dimen/_120sdp"
      android:layout_centerHorizontal="true"
      android:background="@drawable/bg_dialog"
      android:paddingBottom="@dimen/_30sdp"
      android:paddingTop="@dimen/_30sdp"
      android:tint="@color/grey_100"
      app:srcCompat="@drawable/ic_google_play"
      />

  <ImageView
      android:id="@+id/ivCross"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:paddingBottom="@dimen/_8sdp"
      android:paddingEnd="@dimen/_8sdp"
      android:paddingStart="@dimen/_8sdp"
      android:paddingTop="@dimen/_8sdp"
      android:tint="@color/grey_100"
      app:srcCompat="@drawable/ic_clear_black_24dp"
      />

  <TextView
      android:id="@+id/tvReportDesc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/ivSave"
      android:layout_marginEnd="@dimen/_8sdp"
      android:layout_marginStart="@dimen/_8sdp"
      android:layout_marginTop="@dimen/_12sdp"
      android:minHeight="@dimen/_32sdp"
      android:text="@string/rate_us_text"
      style="@style/RegularTextStyle"
      />

  <Button
      android:id="@+id/btnRateNow"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/_30sdp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_below="@id/tvReportDesc"
      android:layout_marginTop="@dimen/_12sdp"
      android:background="?attr/selectableItemBackground"
      android:gravity="center"
      android:paddingEnd="@dimen/_12sdp"
      android:paddingStart="@dimen/_12sdp"
      android:text="@string/rate_us_yes"
      android:textColor="@color/secondaryColor"
      />

  <Button
      android:id="@+id/btnLater"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/_30sdp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_below="@id/btnRateNow"
      android:background="?attr/selectableItemBackground"
      android:gravity="center"
      android:paddingEnd="@dimen/_12sdp"
      android:paddingStart="@dimen/_12sdp"
      android:text="@string/rate_us_later"
      android:textColor="@color/secondaryColor"
      />

  <Button
      android:id="@+id/btnNever"
      android:layout_width="wrap_content"
      android:layout_height="@dimen/_30sdp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_below="@id/btnLater"
      android:background="?attr/selectableItemBackground"
      android:gravity="center"
      android:minHeight="@dimen/_32sdp"
      android:paddingEnd="@dimen/_12sdp"
      android:paddingStart="@dimen/_12sdp"
      android:text="@string/rate_us_never"
      android:textColor="@color/secondaryColor"
      />

</RelativeLayout>
